--- a/index.html
+++ b/index.html
@@ -14,26 +14,31 @@
 <body>
   <div class="card-container">
    <img class="drawers-img" src="images/drawers.jpg" alt="drawers">
-    <div class="text-container">
-    <h2>Shift the overall look and feel by adding these wonderful 
-    touches to furniture in your home</h2>
+   
+  <div class="text-container">
 
-    <p>Ever been in a room and felt like something was missing? Perhaps 
-    it felt slightly bare and uninviting. I’ve got some simple tips 
-    to help you make any room feel complete.</p>
-      <div class="details">
-        <img class="author-img" src="images/avatar-michelle.jpg" alt="michelle">
-        <h3 class="author-name" >Michelle Appleton</h3>
-        <small class="date" >28 Jun 2020</small>
-        <div class="social-media">
-          <span>SHARE</span>
-          <img class="icon fb" src="images/icon-facebook.svg" alt="facebook"><img class="icon twitter" src="images/icon-twitter.svg" alt="twitter"><img class="icon pintrest" src="images/icon-pinterest.svg" alt="pintrest">
-        </div>
-        <button class="share-btn" ><img src="images/icon-share-active.svg" alt="button"></button>
+    <div class="text">
+      <h2>Shift the overall look and feel by adding these wonderful 
+      touches to furniture in your home</h2>
+
+      <p>Ever been in a room and felt like something was missing? Perhaps 
+      it felt slightly bare and uninviting. I’ve got some simple tips 
+      to help you make any room feel complete.</p>
+    </div>
+
+    <div class="details">
+      <img class="author-img" src="images/avatar-michelle.jpg" alt="michelle">
+      <h3 class="author-name" >Michelle Appleton</h3>
+      <small class="date" >28 Jun 2020</small>
+      <button class="share-btn" ><img src="images/icon-share-active.svg" alt="button"></button>
+
+      <div class="social-media">
+        <span>SHARE</span>
+        <img class="icon fb" src="images/icon-facebook.svg" alt="facebook"><img class="icon twitter" src="images/icon-twitter.svg" alt="twitter"><img class="icon pintrest" src="images/icon-pinterest.svg" alt="pintrest">
       </div>
-    
+    </div>
   </div>
-  </div>
+</div>
   <script src="app.js"></script>
 
 </body>
